[tool.poetry]
name = "ai-trading-agent"
version = "0.1.0"
description = "AI Agent for Personalized Token Investment Recommendations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
aiohttp = "^3.9.1"
langchain-core = ">=0.2.39,<0.4"
langchain-openai = "0.2.4"
langgraph = "0.2.39"
cdp-langchain = "0.0.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"